# django_tutorial

./: pyproject.toml  pytest.ini
news/: admin.py  models.py  pagination.py  serializers.py  tests.py  views.py
news/migrations/: 0001_initial.py
tutorial/: settings.py  urls.py
